feat: ajout des captures d'écran de validation W3C

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Portfolio de John Doe - Développeur Web Full Stack" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <meta charset="utf-8">
+        <link rel="icon" href="%PUBLIC_URL%/favicon.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#000000">
+        <meta name="description" content="Portfolio de John Doe - Développeur Web Full Stack">
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
         <title>John Doe - Développeur Web</title>
 
         <!-- Bootstrap CSS -->
@@ -18,7 +18,7 @@
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap" rel="stylesheet" crossorigin>
     </head>
     <body>
         <noscript>Vous devez activer JavaScript pour utiliser cette application.</noscript>
